Added Likes, CORS and imageUrl; clean-up ready for front-end
